---------------------------------------------------------------------------------------------------
Version: 0.00.00
Date: 00. 00. 0000
  Features:
    -
  Changes:
    -
  Bugfixes:
    - Fixed an issue where some modal dialogs might not work correctly after reloading a save
    - Fixed that the last valid modset data would not be retained when importing an invalid subfactory

---------------------------------------------------------------------------------------------------
Version: 1.1.18
Date: 01. 02. 2021
  Changes:
    - Moved the matrix solver toggle to the subfactory info box
    - Added proper error messages to handcrafting machines and modules in the utility dialog
    - Reworded some of the mod setting names as they were awful
  Bugfixes:
    - Fixed a crash when typing into or confirming the export dialog textfield
    - Fixed a crash when using the utility dialog to request items while having no character associated to oneself
    - Potentially fixed a crash related to the matrix solver and fuel

---------------------------------------------------------------------------------------------------
Version: 1.1.17
Date: 22. 01. 2021
  Features:
    - You can now queue handcrafting machines and modules from the utility dialog
  Changes:
    - Made the utility dialog more consistent when checking whether logistic robotics are researched in modded situations
  Bugfixes:
    - Fixed a crash when changing beacon types in the beacon dialog

---------------------------------------------------------------------------------------------------
Version: 1.1.16
Date: 20. 01. 2021
  Changes:
    - Swapped the import/export button around and made their tooltips clearer
  Bugfixes:
    - Fixed a crash with fuel migration
    - Potentially fixed a crash with certain mods that add custom beacons
    - Potentially fixed a crash when deleting subfactories on a multiplayer server with high latency
