@@ -8,6 +8,7 @@ Date: 00. 00. 0000
   Bugfixes:
     - Fixed an issue where some modal dialogs might not work correctly after reloading a save
     - Fixed that the last valid modset data would not be retained when importing an invalid subfactory
+    - Fixed that alt-clicking a default machine in preferences could crash in certain cases
 
 ---------------------------------------------------------------------------------------------------
 Version: 1.1.18
